--- a/test/fixtures/custom_fields_trackers.yml
+++ b/test/fixtures/custom_fields_trackers.yml
@@ -17,3 +17,15 @@ custom_fields_trackers_005:
 custom_fields_trackers_006: 
   custom_field_id: 6
   tracker_id: 3
+custom_fields_trackers_007: 
+  custom_field_id: 12
+  tracker_id: 4
+custom_fields_trackers_007: 
+  custom_field_id: 12
+  tracker_id: 5
+custom_fields_trackers_007: 
+  custom_field_id: 13
+  tracker_id: 4
+custom_fields_trackers_007: 
+  custom_field_id: 13
+  tracker_id: 5
